# Runner

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
game/: CMakeLists.txt
game/client/: CMakeLists.txt
game/client/src/: Client.cpp  Client.h  Components.cpp  Components.h  Constants.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  Network.h  ResIds.h  SDL.h  Scene.h  TextureRepo.h  main.cpp
game/client/src/component/: Components.cpp  Components.h
game/client/src/connection/: ConnectionManager.cpp  ConnectionManager.h
game/client/src/input/: InputManager.cpp  InputManager.h  InputState.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.h
game/client/src/math/: Math.cpp  Math.h
game/client/src/network/: ConnectionManager.cpp  ConnectionManager.h
game/client/src/player/: PlayerManager.cpp  PlayerManager.h  PlayerRepo.cpp  PlayerRepo.h  PlayerState.h
game/client/src/res/: ResIds.h  TextureRepo.h
game/client/src/scene/: Scene.cpp  Scene.h  SceneData.h  SceneInfo.h  SceneLoader.cpp  SceneLoader.h
game/client/src/sdl/: SDL.cpp  SDL.h
game/common/: CMakeLists.txt
game/common/include/common/: Geometry.h  Network.h
game/common/src/: Geometry.cpp
game/server/: CMakeLists.txt
game/server/src/: Game.cpp  Game.h  Server.cpp  Server.h  main.cpp
game/src/: Components.h  Constants.h  Game.cpp  PlayerManager.cpp  ResIds.h  Scene.cpp
game/src/input/: InputState.cpp  InputState.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h
game/src/math/: Geometry.cpp  Geometry.h  Math.cpp
logging/: CMakeLists.txt
logging/include/logging/: Logger.h
network/: CMakeLists.txt
network/demo/: demo_client.cpp  demo_messages.h  demo_server.cpp
network/include/network/: Buffer.h  Client.h  Client.tpp  Common.h  ConcurrentMap.h  ConcurrentQueue.h  ConcurrentSet.h  EventReader.h  EventReader.tpp  NullMutex.h  Server.h  Server.tpp  buffer.h  mux_queue.h  network.h
network/src/: Buffer.cpp  Client.cpp  Common.cpp  Server.cpp  buffer.cpp  network.cpp
src/: Components.cpp  Components.h  Constants.h  Game.cpp  Game.h  KeyboardController.cpp  KeyboardController.h  PlayerController.cpp  PlayerController.h  PlayerState.cpp  PlayerState.h  ResIds.h  SDL.cpp  SDL.h  Scene.cpp  Scene.h  TextureRepo.cpp
src/Components/: PositionComponent.cpp  PositionComponent.h  SpriteComponent.cpp  SpriteComponent.h  VelocityComponent.cpp  VelocityComponent.h
src/Systems/: SpriteSystem.cpp  SpriteSystem.h
src/components/: Position.cpp  Position.h  Sprite.cpp  Sprite.h  Velocity.cpp  Velocity.h
src/input/: InputManager.cpp  InputManager.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h
src/math/: Geometry.cpp  Geometry.h  Math.cpp  Math.h
src/network/: buffer.cpp  buffer.h  connection.h  connection_handler.cpp  connection_handler.h  demo_client.cpp  demo_server.cpp  message_queue.cpp  message_queue.h  messages.h
